Bug 471325 - Focus ring on native-styled tab is cut off at right, r=dao
UltraBlame original commit: 3615bdf56262f027c317301a78594d0fa08468f4

--- a/toolkit/themes/pinstripe/global/tabbox.css
+++ b/toolkit/themes/pinstripe/global/tabbox.css
@@ -99,6 +99,15 @@ tab
 }
 tab
 :
+focus
+{
+position
+:
+relative
+;
+}
+tab
+:
 first
 -
 of
